--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.0",
-    "firebase-admin": "^10.1.0"
+    "fakerator": "^0.3.6",
+    "firebase-admin": "^10.1.0",
+    "nodejs-nodemailer-outlook": "^1.2.4",
+    "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "extract-inline-css": "^1.0.2"
   }
 }
